Kaggle Notebook | Image-to-Image-Style-Transfer | Version 8

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0fc81832",
+   "id": "f1fab73b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:01.008090Z",
-     "iopub.status.busy": "2023-04-06T04:54:01.007208Z",
-     "iopub.status.idle": "2023-04-06T04:54:07.971084Z",
-     "shell.execute_reply": "2023-04-06T04:54:07.969715Z"
+     "iopub.execute_input": "2023-04-06T05:08:07.272144Z",
+     "iopub.status.busy": "2023-04-06T05:08:07.271120Z",
+     "iopub.status.idle": "2023-04-06T05:08:14.768553Z",
+     "shell.execute_reply": "2023-04-06T05:08:14.767447Z"
     },
     "papermill": {
-     "duration": 6.973041,
-     "end_time": "2023-04-06T04:54:07.974517",
+     "duration": 7.50555,
+     "end_time": "2023-04-06T05:08:14.771275",
      "exception": false,
-     "start_time": "2023-04-06T04:54:01.001476",
+     "start_time": "2023-04-06T05:08:07.265725",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e13ac835",
+   "id": "371d35f3",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:07.983361Z",
-     "iopub.status.busy": "2023-04-06T04:54:07.982627Z",
-     "iopub.status.idle": "2023-04-06T04:54:08.971157Z",
-     "shell.execute_reply": "2023-04-06T04:54:08.970132Z"
+     "iopub.execute_input": "2023-04-06T05:08:14.778817Z",
+     "iopub.status.busy": "2023-04-06T05:08:14.778213Z",
+     "iopub.status.idle": "2023-04-06T05:08:15.702732Z",
+     "shell.execute_reply": "2023-04-06T05:08:15.701611Z"
     },
     "papermill": {
-     "duration": 0.995199,
-     "end_time": "2023-04-06T04:54:08.973395",
+     "duration": 0.931093,
+     "end_time": "2023-04-06T05:08:15.705507",
      "exception": false,
-     "start_time": "2023-04-06T04:54:07.978196",
+     "start_time": "2023-04-06T05:08:14.774414",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c1cf87e",
+   "id": "0cc15f98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:08.982222Z",
-     "iopub.status.busy": "2023-04-06T04:54:08.980648Z",
-     "iopub.status.idle": "2023-04-06T04:54:09.298729Z",
-     "shell.execute_reply": "2023-04-06T04:54:09.297654Z"
+     "iopub.execute_input": "2023-04-06T05:08:15.713019Z",
+     "iopub.status.busy": "2023-04-06T05:08:15.712699Z",
+     "iopub.status.idle": "2023-04-06T05:08:15.990421Z",
+     "shell.execute_reply": "2023-04-06T05:08:15.989394Z"
     },
     "papermill": {
-     "duration": 0.326954,
-     "end_time": "2023-04-06T04:54:09.303624",
+     "duration": 0.285825,
+     "end_time": "2023-04-06T05:08:15.994476",
      "exception": false,
-     "start_time": "2023-04-06T04:54:08.976670",
+     "start_time": "2023-04-06T05:08:15.708651",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04c5b2d",
+   "id": "cbc9e2b2",
    "metadata": {
     "papermill": {
-     "duration": 0.005679,
-     "end_time": "2023-04-06T04:54:09.315683",
+     "duration": 0.005087,
+     "end_time": "2023-04-06T05:08:16.004986",
      "exception": false,
-     "start_time": "2023-04-06T04:54:09.310004",
+     "start_time": "2023-04-06T05:08:15.999899",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "db5cec3f",
+   "id": "d64cc20c",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:09.328622Z",
-     "iopub.status.busy": "2023-04-06T04:54:09.328288Z",
-     "iopub.status.idle": "2023-04-06T04:54:22.139378Z",
-     "shell.execute_reply": "2023-04-06T04:54:22.137774Z"
+     "iopub.execute_input": "2023-04-06T05:08:16.016801Z",
+     "iopub.status.busy": "2023-04-06T05:08:16.016504Z",
+     "iopub.status.idle": "2023-04-06T05:08:29.398001Z",
+     "shell.execute_reply": "2023-04-06T05:08:29.396612Z"
     },
     "papermill": {
-     "duration": 12.820276,
-     "end_time": "2023-04-06T04:54:22.141800",
+     "duration": 13.389914,
+     "end_time": "2023-04-06T05:08:29.400301",
      "exception": false,
-     "start_time": "2023-04-06T04:54:09.321524",
+     "start_time": "2023-04-06T05:08:16.010387",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-bf2jm40o\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-bf2jm40o\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-feyn098z\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-feyn098z\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=861864067ae015b689864390f80fac2b80b3def3f16afcee25b1c54be2d0a4d9\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-ro0k6h_j/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=f64ebc5f9f6e5667a7c3485e0412f2a2d307c3cd4258777d91daf2e84984d02a\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-65gl36kt/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bb88569c",
+   "id": "5470415a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:22.156039Z",
-     "iopub.status.busy": "2023-04-06T04:54:22.154906Z",
-     "iopub.status.idle": "2023-04-06T04:54:22.218244Z",
-     "shell.execute_reply": "2023-04-06T04:54:22.215995Z"
+     "iopub.execute_input": "2023-04-06T05:08:29.413832Z",
+     "iopub.status.busy": "2023-04-06T05:08:29.413522Z",
+     "iopub.status.idle": "2023-04-06T05:08:29.445297Z",
+     "shell.execute_reply": "2023-04-06T05:08:29.444402Z"
     },
     "papermill": {
-     "duration": 0.074361,
-     "end_time": "2023-04-06T04:54:22.222290",
+     "duration": 0.040818,
+     "end_time": "2023-04-06T05:08:29.447349",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.147929",
+     "start_time": "2023-04-06T05:08:29.406531",
      "status": "completed"
     },
     "tags": []
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb468159",
+   "id": "ea06b777",
    "metadata": {
     "papermill": {
-     "duration": 0.008583,
-     "end_time": "2023-04-06T04:54:22.240778",
+     "duration": 0.009952,
+     "end_time": "2023-04-06T05:08:29.463023",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.232195",
+     "start_time": "2023-04-06T05:08:29.453071",
      "status": "completed"
     },
     "tags": []
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b798e29c",
+   "id": "ba18a21d",
    "metadata": {
     "papermill": {
-     "duration": 0.019188,
-     "end_time": "2023-04-06T04:54:22.272762",
+     "duration": 0.005834,
+     "end_time": "2023-04-06T05:08:29.474596",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.253574",
+     "start_time": "2023-04-06T05:08:29.468762",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4a18e234",
+   "id": "8e8d9f16",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:22.291541Z",
-     "iopub.status.busy": "2023-04-06T04:54:22.290879Z",
-     "iopub.status.idle": "2023-04-06T04:54:22.305422Z",
-     "shell.execute_reply": "2023-04-06T04:54:22.304477Z"
+     "iopub.execute_input": "2023-04-06T05:08:29.487822Z",
+     "iopub.status.busy": "2023-04-06T05:08:29.486838Z",
+     "iopub.status.idle": "2023-04-06T05:08:29.497431Z",
+     "shell.execute_reply": "2023-04-06T05:08:29.496523Z"
     },
     "papermill": {
-     "duration": 0.026375,
-     "end_time": "2023-04-06T04:54:22.308145",
+     "duration": 0.019304,
+     "end_time": "2023-04-06T05:08:29.499467",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.281770",
+     "start_time": "2023-04-06T05:08:29.480163",
      "status": "completed"
     },
     "tags": []
@@ -358,13 +358,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "457b5596",
+   "id": "e7f78341",
    "metadata": {
     "papermill": {
-     "duration": 0.010562,
-     "end_time": "2023-04-06T04:54:22.328011",
+     "duration": 0.005491,
+     "end_time": "2023-04-06T05:08:29.510532",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.317449",
+     "start_time": "2023-04-06T05:08:29.505041",
      "status": "completed"
     },
     "tags": []
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc26af25",
+   "id": "fbbba244",
    "metadata": {
     "papermill": {
-     "duration": 0.006932,
-     "end_time": "2023-04-06T04:54:22.345000",
+     "duration": 0.005499,
+     "end_time": "2023-04-06T05:08:29.521668",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.338068",
+     "start_time": "2023-04-06T05:08:29.516169",
      "status": "completed"
     },
     "tags": []
@@ -396,19 +396,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7dd05457",
+   "id": "60c8e781",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T04:54:22.361958Z",
-     "iopub.status.busy": "2023-04-06T04:54:22.361626Z",
-     "iopub.status.idle": "2023-04-06T04:54:22.368653Z",
-     "shell.execute_reply": "2023-04-06T04:54:22.367471Z"
+     "iopub.execute_input": "2023-04-06T05:08:29.534736Z",
+     "iopub.status.busy": "2023-04-06T05:08:29.534460Z",
+     "iopub.status.idle": "2023-04-06T05:08:29.548029Z",
+     "shell.execute_reply": "2023-04-06T05:08:29.547117Z"
     },
     "papermill": {
-     "duration": 0.016455,
-     "end_time": "2023-04-06T04:54:22.371125",
+     "duration": 0.022757,
+     "end_time": "2023-04-06T05:08:29.550065",
      "exception": false,
-     "start_time": "2023-04-06T04:54:22.354670",
+     "start_time": "2023-04-06T05:08:29.527308",
      "status": "completed"
     },
     "tags": []
@@ -431,7 +431,47 @@
     "    g = InstanceNormalization(axis=-1)(g)\n",
     "    #concatenate merge channel-wise with the input layer\n",
     "    g = Concatenate()([g,input_layer])\n",
-    "    return g\n"
+    "    return g\n",
+    "\n",
+    "'''define a function that creates 9-ResNet block version for 256X256 input images. Importantly, the model outputs pixel values with the\n",
+    "shape as the input and pixel values are in the range [-1,1]'''\n",
+    "\n",
+    "def define_generator(image_shape,n_resnet=9):\n",
+    "    init = RandomNormal(stddev=0.02)\n",
+    "    in_image = Input(shape=image_shape)\n",
+    "    #c7s1-64\n",
+    "    g = Conv2D(64,(7,7),padding='same',kernel_initializer=init)(in_image)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    g = Activation('relu')(g)\n",
+    "    #d128\n",
+    "    g = Conv2D(128,(3,3),strides=(2,2),padding='same',kernel_initializer=init)(g)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    g = Activation('relu')(g)\n",
+    "    #d256\n",
+    "    g = Conv2D(256,(3,3),strides=(2,2),padding='same',kernel_initializer=init)(g)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    g = Activation('relu')(g)\n",
+    "    #R256\n",
+    "    for _ in range(n_resnet):\n",
+    "        g = resnet_block(256,g)\n",
+    "    #u128\n",
+    "    g = Conv2DTranspose(128,(3,3),strides=(2,2),padding='same',kernel_initializer=init)(g)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    g = Activation('relu')(g)\n",
+    "    #u64\n",
+    "    g = Conv2DTranspose(64,(3,3),strides=(2,2),padding='same',kernel_initializer=init)(g)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    g = Activation('relu')(g)\n",
+    "    #c7s1-3\n",
+    "    g = Conv2DTranspose(3,(7,7),padding='same',kernel_initializer=init)(g)\n",
+    "    g = InstanceNormalization(axis=-1)(g)\n",
+    "    out_image = Activation('tan_h')(g)\n",
+    "    #define model\n",
+    "    model = Model(in_image,out_image)\n",
+    "    return model\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   }
  ],
@@ -455,14 +495,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 33.792302,
-   "end_time": "2023-04-06T04:54:25.329025",
+   "duration": 34.808,
+   "end_time": "2023-04-06T05:08:32.596209",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T04:53:51.536723",
+   "start_time": "2023-04-06T05:07:57.788209",
    "version": "2.4.0"
   }
  },
