Kaggle Notebook | Image-to-Image-Style-Transfer | Version 9

--- a/image-to-image-style-transfer.ipynb
+++ b/image-to-image-style-transfer.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f1fab73b",
+   "id": "3e275479",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:07.272144Z",
-     "iopub.status.busy": "2023-04-06T05:08:07.271120Z",
-     "iopub.status.idle": "2023-04-06T05:08:14.768553Z",
-     "shell.execute_reply": "2023-04-06T05:08:14.767447Z"
+     "iopub.execute_input": "2023-04-06T05:15:37.044013Z",
+     "iopub.status.busy": "2023-04-06T05:15:37.043148Z",
+     "iopub.status.idle": "2023-04-06T05:15:42.934342Z",
+     "shell.execute_reply": "2023-04-06T05:15:42.933212Z"
     },
     "papermill": {
-     "duration": 7.50555,
-     "end_time": "2023-04-06T05:08:14.771275",
+     "duration": 5.89971,
+     "end_time": "2023-04-06T05:15:42.937014",
      "exception": false,
-     "start_time": "2023-04-06T05:08:07.265725",
+     "start_time": "2023-04-06T05:15:37.037304",
      "status": "completed"
     },
     "tags": []
@@ -41,21 +41,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "371d35f3",
+   "id": "0a440036",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:14.778817Z",
-     "iopub.status.busy": "2023-04-06T05:08:14.778213Z",
-     "iopub.status.idle": "2023-04-06T05:08:15.702732Z",
-     "shell.execute_reply": "2023-04-06T05:08:15.701611Z"
+     "iopub.execute_input": "2023-04-06T05:15:42.946874Z",
+     "iopub.status.busy": "2023-04-06T05:15:42.944793Z",
+     "iopub.status.idle": "2023-04-06T05:15:44.290067Z",
+     "shell.execute_reply": "2023-04-06T05:15:44.288171Z"
     },
     "papermill": {
-     "duration": 0.931093,
-     "end_time": "2023-04-06T05:08:15.705507",
+     "duration": 1.351967,
+     "end_time": "2023-04-06T05:15:44.292347",
      "exception": false,
-     "start_time": "2023-04-06T05:08:14.774414",
+     "start_time": "2023-04-06T05:15:42.940380",
      "status": "completed"
     },
     "tags": []
@@ -111,19 +111,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0cc15f98",
+   "id": "8fa37ef7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:15.713019Z",
-     "iopub.status.busy": "2023-04-06T05:08:15.712699Z",
-     "iopub.status.idle": "2023-04-06T05:08:15.990421Z",
-     "shell.execute_reply": "2023-04-06T05:08:15.989394Z"
+     "iopub.execute_input": "2023-04-06T05:15:44.300472Z",
+     "iopub.status.busy": "2023-04-06T05:15:44.299576Z",
+     "iopub.status.idle": "2023-04-06T05:15:44.566991Z",
+     "shell.execute_reply": "2023-04-06T05:15:44.565961Z"
     },
     "papermill": {
-     "duration": 0.285825,
-     "end_time": "2023-04-06T05:08:15.994476",
+     "duration": 0.275638,
+     "end_time": "2023-04-06T05:15:44.571281",
      "exception": false,
-     "start_time": "2023-04-06T05:08:15.708651",
+     "start_time": "2023-04-06T05:15:44.295643",
      "status": "completed"
     },
     "tags": []
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc9e2b2",
+   "id": "1b660e7a",
    "metadata": {
     "papermill": {
-     "duration": 0.005087,
-     "end_time": "2023-04-06T05:08:16.004986",
+     "duration": 0.004993,
+     "end_time": "2023-04-06T05:15:44.581562",
      "exception": false,
-     "start_time": "2023-04-06T05:08:15.999899",
+     "start_time": "2023-04-06T05:15:44.576569",
      "status": "completed"
     },
     "tags": []
@@ -189,20 +189,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d64cc20c",
+   "id": "b00ce7e5",
    "metadata": {
     "_kg_hide-output": true,
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:16.016801Z",
-     "iopub.status.busy": "2023-04-06T05:08:16.016504Z",
-     "iopub.status.idle": "2023-04-06T05:08:29.398001Z",
-     "shell.execute_reply": "2023-04-06T05:08:29.396612Z"
+     "iopub.execute_input": "2023-04-06T05:15:44.593200Z",
+     "iopub.status.busy": "2023-04-06T05:15:44.592844Z",
+     "iopub.status.idle": "2023-04-06T05:15:58.614067Z",
+     "shell.execute_reply": "2023-04-06T05:15:58.612785Z"
     },
     "papermill": {
-     "duration": 13.389914,
-     "end_time": "2023-04-06T05:08:29.400301",
+     "duration": 14.030098,
+     "end_time": "2023-04-06T05:15:58.616826",
      "exception": false,
-     "start_time": "2023-04-06T05:08:16.010387",
+     "start_time": "2023-04-06T05:15:44.586728",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://www.github.com/keras-team/keras-contrib.git\r\n",
-      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-feyn098z\r\n",
-      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-feyn098z\r\n",
+      "  Cloning https://www.github.com/keras-team/keras-contrib.git to /tmp/pip-req-build-gstj3zvb\r\n",
+      "  Running command git clone --filter=blob:none --quiet https://www.github.com/keras-team/keras-contrib.git /tmp/pip-req-build-gstj3zvb\r\n",
       "  warning: redirecting to https://github.com/keras-team/keras-contrib.git/\r\n",
       "  Resolved https://www.github.com/keras-team/keras-contrib.git to commit 3fc5ef709e061416f4bc8a92ca3750c824b5d2b0\r\n",
       "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
       "\u001b[?25hRequirement already satisfied: keras in /opt/conda/lib/python3.7/site-packages (from keras-contrib==2.0.8) (2.11.0)\r\n",
       "Building wheels for collected packages: keras-contrib\r\n",
       "  Building wheel for keras-contrib (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=f64ebc5f9f6e5667a7c3485e0412f2a2d307c3cd4258777d91daf2e84984d02a\r\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-65gl36kt/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
+      "\u001b[?25h  Created wheel for keras-contrib: filename=keras_contrib-2.0.8-py3-none-any.whl size=101076 sha256=c48dc4cf60ba9b10585f995dc222341e7cad123eef549bee9bbccd13657f3a0f\r\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-uwaeiggy/wheels/bb/1f/f2/b57495012683b6b20bbae94a3915ec79753111452d79886abc\r\n",
       "Successfully built keras-contrib\r\n",
       "Installing collected packages: keras-contrib\r\n",
       "Successfully installed keras-contrib-2.0.8\r\n",
@@ -238,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5470415a",
+   "id": "3afa4449",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:29.413832Z",
-     "iopub.status.busy": "2023-04-06T05:08:29.413522Z",
-     "iopub.status.idle": "2023-04-06T05:08:29.445297Z",
-     "shell.execute_reply": "2023-04-06T05:08:29.444402Z"
+     "iopub.execute_input": "2023-04-06T05:15:58.630619Z",
+     "iopub.status.busy": "2023-04-06T05:15:58.630266Z",
+     "iopub.status.idle": "2023-04-06T05:15:58.661428Z",
+     "shell.execute_reply": "2023-04-06T05:15:58.660473Z"
     },
     "papermill": {
-     "duration": 0.040818,
-     "end_time": "2023-04-06T05:08:29.447349",
+     "duration": 0.040508,
+     "end_time": "2023-04-06T05:15:58.663612",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.406531",
+     "start_time": "2023-04-06T05:15:58.623104",
      "status": "completed"
     },
     "tags": []
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea06b777",
+   "id": "17bd1d6b",
    "metadata": {
     "papermill": {
-     "duration": 0.009952,
-     "end_time": "2023-04-06T05:08:29.463023",
+     "duration": 0.005567,
+     "end_time": "2023-04-06T05:15:58.674997",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.453071",
+     "start_time": "2023-04-06T05:15:58.669430",
      "status": "completed"
     },
     "tags": []
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba18a21d",
+   "id": "92b03221",
    "metadata": {
     "papermill": {
-     "duration": 0.005834,
-     "end_time": "2023-04-06T05:08:29.474596",
+     "duration": 0.005556,
+     "end_time": "2023-04-06T05:15:58.686232",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.468762",
+     "start_time": "2023-04-06T05:15:58.680676",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e8d9f16",
+   "id": "ce4dead3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:29.487822Z",
-     "iopub.status.busy": "2023-04-06T05:08:29.486838Z",
-     "iopub.status.idle": "2023-04-06T05:08:29.497431Z",
-     "shell.execute_reply": "2023-04-06T05:08:29.496523Z"
+     "iopub.execute_input": "2023-04-06T05:15:58.698934Z",
+     "iopub.status.busy": "2023-04-06T05:15:58.698634Z",
+     "iopub.status.idle": "2023-04-06T05:15:58.708683Z",
+     "shell.execute_reply": "2023-04-06T05:15:58.707601Z"
     },
     "papermill": {
-     "duration": 0.019304,
-     "end_time": "2023-04-06T05:08:29.499467",
+     "duration": 0.018647,
+     "end_time": "2023-04-06T05:15:58.710589",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.480163",
+     "start_time": "2023-04-06T05:15:58.691942",
      "status": "completed"
     },
     "tags": []
@@ -358,13 +358,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f78341",
+   "id": "ce9f96c8",
    "metadata": {
     "papermill": {
-     "duration": 0.005491,
-     "end_time": "2023-04-06T05:08:29.510532",
+     "duration": 0.00557,
+     "end_time": "2023-04-06T05:15:58.721979",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.505041",
+     "start_time": "2023-04-06T05:15:58.716409",
      "status": "completed"
     },
     "tags": []
@@ -375,13 +375,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbba244",
+   "id": "bffde39d",
    "metadata": {
     "papermill": {
-     "duration": 0.005499,
-     "end_time": "2023-04-06T05:08:29.521668",
+     "duration": 0.005546,
+     "end_time": "2023-04-06T05:15:58.733264",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.516169",
+     "start_time": "2023-04-06T05:15:58.727718",
      "status": "completed"
     },
     "tags": []
@@ -396,26 +396,29 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "60c8e781",
+   "id": "d6a29faa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-06T05:08:29.534736Z",
-     "iopub.status.busy": "2023-04-06T05:08:29.534460Z",
-     "iopub.status.idle": "2023-04-06T05:08:29.548029Z",
-     "shell.execute_reply": "2023-04-06T05:08:29.547117Z"
+     "iopub.execute_input": "2023-04-06T05:15:58.746856Z",
+     "iopub.status.busy": "2023-04-06T05:15:58.746098Z",
+     "iopub.status.idle": "2023-04-06T05:15:58.760016Z",
+     "shell.execute_reply": "2023-04-06T05:15:58.759124Z"
     },
     "papermill": {
-     "duration": 0.022757,
-     "end_time": "2023-04-06T05:08:29.550065",
+     "duration": 0.023069,
+     "end_time": "2023-04-06T05:15:58.762053",
      "exception": false,
-     "start_time": "2023-04-06T05:08:29.527308",
+     "start_time": "2023-04-06T05:15:58.738984",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "'''We first define the ResNet Blocks. These are blocks compromised of two 3X3 CNN layers where the input to the block is concatenated\n",
+    "'''\n",
+    "The ResNet architecture allows for the training of very deep neural networks by introducing residual connections that skip some layers,\n",
+    "which helps prevent the vanishing gradient problem.\n",
+    "We first define the ResNet Blocks. These are blocks compromised of two 3X3 CNN layers where the input to the block is concatenated\n",
     "to the output of the block, channel-wise.\n",
     "This function creates 2 Convulation-InstanceNorm blocks with 3X3 filter and 1X1 stride.\n",
     "Same padding is used instead of refelction padded reccomended in the paper.\n",
@@ -434,12 +437,14 @@
     "    return g\n",
     "\n",
     "'''define a function that creates 9-ResNet block version for 256X256 input images. Importantly, the model outputs pixel values with the\n",
-    "shape as the input and pixel values are in the range [-1,1]'''\n",
+    "shape as the input and pixel values are in the range [-1,1]\n",
+    "\n",
+    "'''\n",
     "\n",
     "def define_generator(image_shape,n_resnet=9):\n",
     "    init = RandomNormal(stddev=0.02)\n",
     "    in_image = Input(shape=image_shape)\n",
-    "    #c7s1-64\n",
+    "    #c7s1-64 7x7 filter and stride of 1, with 64 output channels.\n",
     "    g = Conv2D(64,(7,7),padding='same',kernel_initializer=init)(in_image)\n",
     "    g = InstanceNormalization(axis=-1)(g)\n",
     "    g = Activation('relu')(g)\n",
@@ -451,10 +456,12 @@
     "    g = Conv2D(256,(3,3),strides=(2,2),padding='same',kernel_initializer=init)(g)\n",
     "    g = InstanceNormalization(axis=-1)(g)\n",
     "    g = Activation('relu')(g)\n",
-    "    #R256\n",
+    "    #R256 ResNet block with 256 output channels.\n",
     "    for _ in range(n_resnet):\n",
     "        g = resnet_block(256,g)\n",
-    "    #u128\n",
+    "    '''Apply a series of transposed convolutional layers with Instance Normalization and ReLU activation,\n",
+    "    before outputting the generated image with the same shape as the input image.'''\n",
+    "    #u128 transposed convolutional layer with 128 output channels, and a stride of 2, which corresponds to upsampling the feature map\n",
     "    g = Conv2DTranspose(128,(3,3),strides=(2,2),padding='same',kernel_initializer=init)(g)\n",
     "    g = InstanceNormalization(axis=-1)(g)\n",
     "    g = Activation('relu')(g)\n",
@@ -466,6 +473,7 @@
     "    g = Conv2DTranspose(3,(7,7),padding='same',kernel_initializer=init)(g)\n",
     "    g = InstanceNormalization(axis=-1)(g)\n",
     "    out_image = Activation('tan_h')(g)\n",
+    "    '''tan_h activation function is used for the output image to ensure pixel values are in the range of [-1,1].'''\n",
     "    #define model\n",
     "    model = Model(in_image,out_image)\n",
     "    return model\n",
@@ -495,14 +503,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 34.808,
-   "end_time": "2023-04-06T05:08:32.596209",
+   "duration": 33.680379,
+   "end_time": "2023-04-06T05:16:02.341509",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-06T05:07:57.788209",
+   "start_time": "2023-04-06T05:15:28.661130",
    "version": "2.4.0"
   }
  },
